--- a/app/src/routes/styles.css
+++ b/app/src/routes/styles.css
@@ -7,6 +7,20 @@
 }
 
 body {
-	min-height: 100vh;
 	margin: 0;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #1f1f1f;
+	border-radius: 2px;
 }
